--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
       "url": "https://github.com/Cylonsoft/sequelize-datatables/blob/master/LICENSE-MIT"
     }
   ],
-  "main": "lib/cylonsoft-sequelize-datatables",
+  "main": "lib",
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -31,12 +31,17 @@
     "lodash": "^2.4.2"
   },
   "devDependencies": {
+    "bluebird": "^2.9.32",
+    "chai": "^3.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.6.4",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-mocha-istanbul": "^2.4.0",
     "grunt-mocha-test": "^0.12.7",
-    "mocha": "^2.2.5"
+    "istanbul": "^0.3.17",
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4"
   },
   "keywords": []
 }
