--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cylonsoft-sequelize-datatables",
   "description": "Create JQuery datatables server side response from Sequelize models",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/Cylonsoft/sequelize-datatables",
   "author": {
     "name": "Gabo Acosta",
@@ -28,10 +28,10 @@
     "test": "grunt nodeunit"
   },
   "dependencies": {
-    "lodash": "^2.4.2"
+    "lodash": "^2.4.2",
+    "bluebird": "^2.9.32"
   },
   "devDependencies": {
-    "bluebird": "^2.9.32",
     "chai": "^3.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-jshint": "~0.6.4",
